# soundtouch-rust

./: Cargo.toml  README.md
src/: main.rs
src/frontend/: index.html  script.js  style.css
