[package]
name = "soundtouch_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
bose_soundtouch = "=2.1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
youtube_dl = "=0.9.0"
axum = { version = "0.7", features = ["tower-log", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
mdns-sd = "0.12"
lazy_static = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"